# protosock

./: CMakeLists.txt  README.md  conanfile.txt
Binaries/client/: CMakeLists.txt
Binaries/client/src/: main.cpp
Binaries/server/: CMakeLists.txt
Binaries/server/src/: main.cpp
Libraries/: CMakeLists.txt
Libraries/Messages/: CMakeLists.txt
Libraries/Messages/include/Messages/: PersonBuilder.h
Libraries/Messages/proto/: messages.proto
Libraries/Messages/src/: PersonBuilder.cpp
